--- a/src/index.html
+++ b/src/index.html
@@ -84,14 +84,67 @@
   </style>
 </head>
 <body>
-  <div class="vs-container d-flex flex-column">
-    <div class="vs-topbar vs-fade-up">
+  <div class="modal fade" id="project-modal" tabindex="-1" aria-labelledby="projectModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content vs-startup-modal">
+        <div class="modal-body">
+          <div class="text-center mb-4">
+            <div class="vs-logo mx-auto" style="width: 50px; height: 50px; border-radius: 12px; font-size: 18px;">V</div>
+            <h5 class="modal-title mt-3" id="projectModalLabel">Versus Alpha</h5>
+            <p class="vs-muted">Добро пожаловать!</p>
+          </div>
+
+          <div class="vs-modal-view active" id="modal-view-initial">
+            <div class="d-grid gap-3">
+              <button type="button" class="vs-btn vs-btn-modal" id="show-create-project-view">
+                <svg width="18" height="18" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/></svg>
+                Создать проект
+              </button>
+              <button type="button" class="vs-btn vs-btn-modal" id="open-project-btn">
+                 <svg width="18" height="18" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a1.99 1.99 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4H2.19zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139C1.72 3.042 1.95 3 2.19 3h5.396l-.707-.707z"/></svg>
+                Открыть проект
+              </button>
+            </div>
+          </div>
+
+          <div class="vs-modal-view" id="modal-view-create">
+  <form id="create-project-form">
+    <div class="vs-prop mb-3">
+      <label for="project-name" class="form-label">Название проекта</label>
+      <input type="text" class="vs-input" id="project-name" required>
+    </div>
+ <div class="vs-prop mb-4">
+  <label for="project-location" class="form-label">Расположение</label>
+  <div class="input-group">
+    <input type="text" class="vs-input form-control" id="project-location" placeholder="..." readonly required>
+    <button class="vs-btn" type="button" id="select-location-btn" title="Выбрать папку">
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" viewBox="0 0 16 16">
+        <path d="M9.828 4H2a2 2 0 0 0-2 2v6.5A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5V6a2 2 0 0 0-2-2H9.828zM2 5h6.828L10.5 6.672H14a1 1 0 0 1 1 1v5.828A.5.5 0 0 1 14.5 14H1.5a.5.5 0 0 1-.5-.5V6a1 1 0 0 1 1-1z"/>
+      </svg>
+    </button>
+  </div>
+</div>
+
+    <div class="d-grid gap-3">
+       <button type="submit" class="vs-btn primary">Создать</button>
+       <button type="button" class="vs-btn" id="back-to-initial-view">Назад</button>
+    </div>
+  </form>
+</div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="vs-container d-flex flex-column" style="visibility: hidden;"> <div class="vs-topbar vs-fade-up">
       <div class="d-flex align-items-center gap-4 w-100">
         <div class="d-flex align-items-center">
           <div class="vs-logo me-2">V</div>
           <div>
-            <div class="vs-app-title">Versus</div>
-            <div class="vs-app-sub" style="margin-right: 10px;">3D Game Builder — Прототип</div>
+            <div class="vs-app-title" id="project-title-display">Versus</div>
+            <div class="vs-app-sub" style="margin-right: 10px;">Versus - 0.0.1</div>
           </div>
         </div>
 
@@ -99,24 +152,42 @@
           <div class="dropdown">
             <button style="margin-right: 10px;" class="vs-btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
               <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 1.5H9.5L14 6V14.5H4V1.5Z" stroke="currentColor" stroke-linejoin="round"></path><path d="M9 1.5V6H14" stroke="currentColor" stroke-linejoin="round"></path></svg>
-              Файл
+              Проект
             </button>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#" id="load-model-btn">Загрузить модель (.glb, .gltf, .obj, .fbx)</a></li>
-              <li><a class="dropdown-item" href="#" id="load-hdri-btn">Загрузить окружение (.hdr)</a></li>
-              <li><a class="dropdown-item" href="#">Новый</a></li>
-              <li><a class="dropdown-item" href="#">Открыть</a></li>
-              <li><a class="dropdown-item" href="#">Сохранить как</a></li>
-              <li><a class="dropdown-item" href="#">Собрать</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Выйти</a></li>
-            </ul>
+                <li><a class="dropdown-item" href="#" id="new-project-menu-btn">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/></svg>
+                  Новый
+                </a></li>
+                <li><a class="dropdown-item" href="#" id="open-project-menu-btn">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a1.99 1.99 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4H2.19zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139C1.72 3.042 1.95 3 2.19 3h5.396l-.707-.707z"/></svg>
+                  Открыть
+                </a></li>
+                <li><a class="dropdown-item" href="#" id="save-project-btn">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/></svg>
+                  Сохранить
+                </a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/><path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/></svg>
+                  Настройки
+                </a></li>
+                <li><a class="dropdown-item" href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M12.5 3a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5zm0 3a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5zm.5 3.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 .5-.5zm-.5 2.5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1h5z"/><path d="M16 2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2zM4 1v14H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h2zm1 0h9a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5V1z"/></svg>
+                  Собрать
+                </a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0v2z"/><path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z"/></svg>
+                  Выйти
+                </a></li>
+              </ul>
           </div>
-          <button style="margin-right: 10px;" class="vs-btn" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Назад (Ctrl+Z)">
+          <button id="undo-btn" style="margin-right: 10px;" class="vs-btn" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Назад (Ctrl+Z)">
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3.5 7.5H10.5C12.1569 7.5 13.5 8.84315 13.5 10.5V10.5C13.5 12.1569 12.1569 13.5 10.5 13.5H9.5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path><path d="M6 5L3.5 7.5L6 10" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path></svg>
             Назад
           </button>
-          <button style="margin-right: 10px;" class="vs-btn" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Повторить (Ctrl+Y)">
+          <button id="redo-btn" style="margin-right: 10px;" class="vs-btn" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Повторить (Ctrl+Y)">
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12.5 7.5H5.5C3.84315 7.5 2.5 8.84315 2.5 10.5V10.5C2.5 12.1569 3.84315 13.5 5.5 13.5H6.5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path><path d="M10 5L12.5 7.5L10 10" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path></svg>
             Повторить
           </button>
@@ -518,20 +589,20 @@
         </div>
       </div>
     </div>
-
+    
     <div class="vs-bottom-panel vs-fade-up">
-        <div class="vs-assets">
-            <div class="d-flex flex-column gap-2">
-              <div class="vs-section-title">Assets</div>
-              <div class="d-flex gap-2">
-                <div class="vs-asset-item">Cube</div>
-                <div class="vs-asset-item">Sphere</div>
-                <div class="vs-asset-item">Plane</div>
-                <div class="vs-asset-item">Light</div>
-              </div>
+        <div class="vs-asset-explorer">
+            <div class="vs-asset-explorer-header">
+                <nav class="vs-asset-breadcrumbs" aria-label="breadcrumb">
+                    </nav>
+            </div>
+            <div class="vs-asset-explorer-body">
+                <div class="vs-asset-grid">
+                    </div>
             </div>
         </div>
     </div>
+
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
